examples/main/default/objects/SC_ConversationMessage__c/SC_ConversationMessage__c.object-meta.xml
<CustomObject>
    <description>Stores every inbound and outbound email message in the AI-driven sales cycle demo. Each record is one email turn — either from the agent (Outbound) or the customer (Inbound).</description>
    <label>Conversation Message</label>
    <nameField>
        <label>Message ID</label>
        <type>AutoNumber</type>
        <displayFormat>MSG-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Conversation Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>