examples/main/default/objects/SC_ConversationMessage__c/fields/AgentName__c.field-meta.xml
<CustomField>
    <fullName>AgentName__c</fullName>
    <label>Agent Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>