examples/main/default/objects/SC_ConversationMessage__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ConversationMessages</relationshipName>
    <relationshipLabel>Conversation Messages</relationshipLabel>
</CustomField>