examples/main/default/objects/SC_ConversationMessage__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipName>ConversationMessages</relationshipName>
    <relationshipLabel>Conversation Messages</relationshipLabel>
</CustomField>