examples/main/default/objects/SC_ConversationMessage__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>ConversationMessages</relationshipName>
    <relationshipLabel>Conversation Messages</relationshipLabel>
</CustomField>