examples/main/default/objects/SC_ConversationMessage__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Lead</fullName><default>true</default><label>Lead</label></value>
            <value><fullName>Opportunity</fullName><default>false</default><label>Opportunity</label></value>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Payment</fullName><default>false</default><label>Payment</label></value>
            <value><fullName>Order</fullName><default>false</default><label>Order</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>