examples/main/default/objects/SC_ConversationMessage__c/fields/ToEmail__c.field-meta.xml
<CustomField>
    <fullName>ToEmail__c</fullName>
    <label>To Email</label>
    <type>Email</type>
</CustomField>